--- a/StoryApp_Mongo/package.json
+++ b/StoryApp_Mongo/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "module7",
+  "name": "exercise7",
   "version": "1.0.0",
-  "description": "",
+  "description": "Integrate users",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app"
   },
-  "author": "Tushar Nemade",
+  "author": "Lijuan Cao",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongodb": "^4.4.1",
+    "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
